# vuln_scanner

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_udp.py  vulnscanner.cpp  vulnscanner.slnx  vulnscanner.vcxproj  vulnscanner.vcxproj.filters
include/: analysis.h  config.h  network.h  scannerIP.h  utils.h
src/: README.md  analysis.c  config.c  main.c  network.c  scannerIP.c  utils.c  winsock_test.c
